--- a/tests/ApiCoverageTool.AssemblyUnderTests/.editorconfig
+++ b/tests/ApiCoverageTool.AssemblyUnderTests/.editorconfig
@@ -1,55 +1,12 @@
-root = true
 # EditorConfig is awesome: https://EditorConfig.org
 # Based on https://github.com/dotnet/roslyn/blob/main/.editorconfig
 
 # top-most EditorConfig file
+root = true
 
 # Don't use tabs for indentation.
 [*]
 indent_style = space
-
-# Microsoft .NET properties
-csharp_new_line_before_members_in_object_initializers = false
-csharp_preferred_modifier_order = public, private, protected, internal, new, abstract, virtual, sealed, override, static, readonly, extern, unsafe, volatile, async:suggestion
-csharp_style_var_elsewhere = true:suggestion
-csharp_style_var_for_built_in_types = true:suggestion
-csharp_style_var_when_type_is_apparent = true:suggestion
-dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:none
-dotnet_style_parentheses_in_other_binary_operators = never_if_unnecessary:none
-dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:none
-dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
-dotnet_style_predefined_type_for_member_access = true:suggestion
-dotnet_style_qualification_for_event = false:suggestion
-dotnet_style_qualification_for_field = false:suggestion
-dotnet_style_qualification_for_method = false:suggestion
-dotnet_style_qualification_for_property = false:suggestion
-dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggestion
-
-# ReSharper properties
-resharper_braces_for_ifelse = required_for_multiline
-resharper_braces_for_using = required_for_multiline
-resharper_can_use_global_alias = false
-resharper_constructor_or_destructor_body = expression_body
-resharper_local_function_body = expression_body
-resharper_method_or_operator_body = expression_body
-
-# ReSharper inspection severities
-resharper_arrange_constructor_or_destructor_body_highlighting = hint
-resharper_arrange_local_function_body_highlighting = hint
-resharper_arrange_method_or_operator_body_highlighting = hint
-resharper_arrange_redundant_parentheses_highlighting = hint
-resharper_arrange_this_qualifier_highlighting = hint
-resharper_arrange_type_member_modifiers_highlighting = hint
-resharper_arrange_type_modifiers_highlighting = hint
-resharper_built_in_type_reference_style_for_member_access_highlighting = hint
-resharper_built_in_type_reference_style_highlighting = hint
-resharper_enforce_foreach_statement_braces_highlighting = suggestion
-resharper_enforce_for_statement_braces_highlighting = suggestion
-resharper_enforce_if_statement_braces_highlighting = suggestion
-resharper_redundant_base_qualifier_highlighting = warning
-resharper_suggest_var_or_type_built_in_types_highlighting = hint
-resharper_suggest_var_or_type_elsewhere_highlighting = hint
-resharper_suggest_var_or_type_simple_types_highlighting = hint
 # (Please don't specify an indent_size here; that has too many unintended consequences.)
 
 # Code files
@@ -83,7 +40,7 @@ indent_size = 2
 [*.{cs,vb}]
 
 # IDE0055: Fix formatting
-dotnet_diagnostic.ide0055.severity = warning
+dotnet_diagnostic.IDE0055.severity = warning
 
 # Sort using and Import directives with System.* appearing first
 dotnet_sort_system_directives_first = true
@@ -188,22 +145,22 @@ dotnet_naming_symbols.all_members.applicable_kinds = *
 dotnet_naming_style.pascal_case_style.capitalization = pascal_case
 
 # error RS2008: Enable analyzer release tracking for the analyzer project containing rule '{0}'
-dotnet_diagnostic.rs2008.severity = none
+dotnet_diagnostic.RS2008.severity = none
 
 # IDE0073: File header
-dotnet_diagnostic.ide0073.severity = warning
+dotnet_diagnostic.IDE0073.severity = warning
 
 # IDE0035: Remove unreachable code
-dotnet_diagnostic.ide0035.severity = warning
+dotnet_diagnostic.IDE0035.severity = warning
 
 # IDE0036: Order modifiers
-dotnet_diagnostic.ide0036.severity = warning
+dotnet_diagnostic.IDE0036.severity = warning
 
 # IDE0043: Format string contains invalid placeholder
-dotnet_diagnostic.ide0043.severity = warning
+dotnet_diagnostic.IDE0043.severity = warning
 
 # IDE0044: Make field readonly
-dotnet_diagnostic.ide0044.severity = warning
+dotnet_diagnostic.IDE0044.severity = warning
 
 # RS0016: Only enable if API files are present
 dotnet_public_api_analyzer.require_api_files = true
@@ -289,97 +246,91 @@ csharp_preserve_single_line_statements = false:suggestion
 dotnet_style_allow_statement_immediately_after_block_experimental = false
 
 # SA1200: Using directives should be placed correctly
-dotnet_diagnostic.sa1200.severity = none
+dotnet_diagnostic.SA1200.severity = none
 
 # SA1600: Elements should be documented
-dotnet_diagnostic.sa1600.severity = none
+dotnet_diagnostic.SA1600.severity = none
 
 # SA1503: Braces should not be omitted
-dotnet_diagnostic.sa1503.severity = none
+dotnet_diagnostic.SA1503.severity = none
 
 # SA1124: Do not use regions
-dotnet_diagnostic.sa1124.severity = none
+dotnet_diagnostic.SA1124.severity = none
 
 # SA1633: File should have header
-dotnet_diagnostic.sa1633.severity = none
+dotnet_diagnostic.SA1633.severity = none
 
 # SA1101: Prefix local calls with this
-dotnet_diagnostic.sa1101.severity = none
+dotnet_diagnostic.SA1101.severity = none
 
 # SA1519: Braces should not be omitted from multi-line child statement
-dotnet_diagnostic.sa1519.severity = none
+dotnet_diagnostic.SA1519.severity = none
+
+# xUnit1013: Public method should be marked as test
+dotnet_diagnostic.xUnit1013.severity = none
+
+# CA1822: Mark members as static
+dotnet_diagnostic.CA1822.severity = none
+
+# IDE0039: Use local function
+dotnet_diagnostic.IDE0039.severity = none
 
 [src/CodeStyle/**.{cs,vb}]
 # warning RS0005: Do not use generic CodeAction.Create to create CodeAction
-dotnet_diagnostic.rs0005.severity = none
+dotnet_diagnostic.RS0005.severity = none
 
 [src/{Analyzers,CodeStyle,Features,Workspaces,EditorFeatures,VisualStudio}/**/*.{cs,vb}]
 
 # IDE0011: Add braces
 csharp_prefer_braces = when_multiline:warning
 # NOTE: We need the below severity entry for Add Braces due to https://github.com/dotnet/roslyn/issues/44201
-dotnet_diagnostic.ide0011.severity = warning
+dotnet_diagnostic.IDE0011.severity = warning
 
 # IDE0040: Add accessibility modifiers
-dotnet_diagnostic.ide0040.severity = warning
+dotnet_diagnostic.IDE0040.severity = warning
 
 # CONSIDER: Are IDE0051 and IDE0052 too noisy to be warnings for IDE editing scenarios? Should they be made build-only warnings?
 # IDE0051: Remove unused private member
-dotnet_diagnostic.ide0051.severity = warning
+dotnet_diagnostic.IDE0051.severity = warning
 
 # IDE0052: Remove unread private member
-dotnet_diagnostic.ide0052.severity = warning
+dotnet_diagnostic.IDE0052.severity = warning
 
 # IDE0059: Unnecessary assignment to a value
-dotnet_diagnostic.ide0059.severity = warning
+dotnet_diagnostic.IDE0059.severity = warning
 
 # IDE0060: Remove unused parameter
-dotnet_diagnostic.ide0060.severity = warning
+dotnet_diagnostic.IDE0060.severity = warning
 
 # CA1012: Abstract types should not have public constructors
-dotnet_diagnostic.ca1012.severity = warning
+dotnet_diagnostic.CA1012.severity = warning
 
 # CA1822: Make member static
-dotnet_diagnostic.ca1822.severity = warning
+dotnet_diagnostic.CA1822.severity = warning
 
 # Prefer "var" everywhere
-dotnet_diagnostic.ide0007.severity = warning
+dotnet_diagnostic.IDE0007.severity = warning
 csharp_style_var_for_built_in_types = true:warning
 csharp_style_var_when_type_is_apparent = true:warning
 csharp_style_var_elsewhere = true:warning
 
 # dotnet_style_allow_multiple_blank_lines_experimental
-dotnet_diagnostic.ide2000.severity = warning
+dotnet_diagnostic.IDE2000.severity = warning
 
 # csharp_style_allow_embedded_statements_on_same_line_experimental
-dotnet_diagnostic.ide2001.severity = warning
+dotnet_diagnostic.IDE2001.severity = warning
 
 # csharp_style_allow_blank_lines_between_consecutive_braces_experimental
-dotnet_diagnostic.ide2002.severity = warning
+dotnet_diagnostic.IDE2002.severity = warning
 
 # dotnet_style_allow_statement_immediately_after_block_experimental
-dotnet_diagnostic.ide2003.severity = warning
+dotnet_diagnostic.IDE2003.severity = warning
 
 # csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental
-dotnet_diagnostic.ide2004.severity = warning
+dotnet_diagnostic.IDE2004.severity = warning
 
 [src/{VisualStudio}/**/*.{cs,vb}]
 # CA1822: Make member static
 # Not enforced as a build 'warning' for 'VisualStudio' layer due to large number of false positives from https://github.com/dotnet/roslyn-analyzers/issues/3857 and https://github.com/dotnet/roslyn-analyzers/issues/3858
 # Additionally, there is a risk of accidentally breaking an internal API that partners rely on though IVT.
-dotnet_diagnostic.ca1822.severity = suggestion
-
-[*.{appxmanifest,axml,build,config,csproj,dbml,discomap,dtd,jsproj,lsproj,njsproj,nuspec,proj,props,proto,resw,resx,StyleCop,targets,tasks,vbproj,xml,xsd}]
-indent_style = tab
-indent_size = tab
-tab_width = 4
-
-[*.{asax,ascx,aspx,axaml,cs,cshtml,css,htm,html,js,jsx,master,paml,razor,skin,ts,tsx,vb,xaml,xamlx,xoml}]
-indent_style = space
-indent_size = 4
-tab_width = 4
-
-[*.{json,resjson}]
-indent_style = space
-indent_size = 2
-tab_width = 2
+dotnet_diagnostic.CA1822.severity = suggestion
