--- a/ApiCoverageTool/ApiCoverageTool.csproj
+++ b/ApiCoverageTool/ApiCoverageTool.csproj
@@ -5,8 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="Mono.Cecil" Version="0.11.4" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.9" />
     <PackageReference Include="RestEase" Version="1.5.5" />
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
