--- a/ApiCoverageTool/ApiCoverageTool.csproj
+++ b/ApiCoverageTool/ApiCoverageTool.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.95.4" />
     <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="Mono.Cecil" Version="0.11.4" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.9" />
