--- a/.editorconfig
+++ b/.editorconfig
@@ -13,18 +13,15 @@ indent_style = space
 # Microsoft .NET properties
 csharp_new_line_before_members_in_object_initializers = false
 csharp_preferred_modifier_order = public, private, protected, internal, new, abstract, virtual, sealed, override, static, readonly, extern, unsafe, volatile, async:suggestion
-csharp_style_var_elsewhere = true:suggestion
-csharp_style_var_for_built_in_types = true:warning
-csharp_style_var_when_type_is_apparent = true:warning
-dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:none
-dotnet_style_parentheses_in_other_binary_operators = never_if_unnecessary:none
-dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:none
+dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:warning
+dotnet_style_parentheses_in_other_binary_operators = never_if_unnecessary:warning
+dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:warning
 dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
 dotnet_style_predefined_type_for_member_access = true:suggestion
-dotnet_style_qualification_for_event = false:suggestion
-dotnet_style_qualification_for_field = false:suggestion
-dotnet_style_qualification_for_method = false:suggestion
-dotnet_style_qualification_for_property = false:suggestion
+dotnet_style_qualification_for_event = false:warning
+dotnet_style_qualification_for_field = false:warning
+dotnet_style_qualification_for_method = false:warning
+dotnet_style_qualification_for_property = false:warning
 dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggestion
 
 # ReSharper properties
@@ -103,11 +100,13 @@ indent_size = 2
 [*.{cs,vb}]
 
 # IDE0055: Fix formatting
-dotnet_diagnostic.ide0055.severity = warning
+dotnet_diagnostic.IDE0055.severity = warning
 
 # Sort using and Import directives with System.* appearing first
 dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = false
+dotnet_style_namespace_match_folder = true
+
 # Avoid "this." and "Me." if not necessary
 dotnet_style_qualification_for_field = false:warning
 dotnet_style_qualification_for_property = false:warning
@@ -142,7 +141,7 @@ dotnet_naming_style.non_private_static_field_style.capitalization = pascal_case
 # Non-private readonly fields are PascalCase
 dotnet_naming_rule.non_private_readonly_fields_should_be_pascal_case.severity = warning
 dotnet_naming_rule.non_private_readonly_fields_should_be_pascal_case.symbols = non_private_readonly_fields
-dotnet_naming_rule.non_private_readonly_fields_should_be_pascal_case.style = non_private_readonly_field_style
+dotnet_naming_rule.non_private_readonly_fields_should_be_pascal_case.style = non_private_static_field_style
 
 dotnet_naming_symbols.non_private_readonly_fields.applicable_kinds = field
 dotnet_naming_symbols.non_private_readonly_fields.applicable_accessibilities = public, protected, internal, protected_internal, private_protected
@@ -153,7 +152,7 @@ dotnet_naming_style.non_private_readonly_field_style.capitalization = pascal_cas
 # Constants are PascalCase
 dotnet_naming_rule.constants_should_be_pascal_case.severity = warning
 dotnet_naming_rule.constants_should_be_pascal_case.symbols = constants
-dotnet_naming_rule.constants_should_be_pascal_case.style = constant_style
+dotnet_naming_rule.constants_should_be_pascal_case.style = non_private_static_field_style
 
 dotnet_naming_symbols.constants.applicable_kinds = field, local
 dotnet_naming_symbols.constants.required_modifiers = const
@@ -163,7 +162,7 @@ dotnet_naming_style.constant_style.capitalization = pascal_case
 # Static fields are PascalCase
 dotnet_naming_rule.static_fields_should_be_pascal_case.severity = warning
 dotnet_naming_rule.static_fields_should_be_pascal_case.symbols = static_fields
-dotnet_naming_rule.static_fields_should_be_pascal_case.style = static_field_style
+dotnet_naming_rule.static_fields_should_be_pascal_case.style = non_private_static_field_style
 
 dotnet_naming_symbols.static_fields.applicable_kinds = field
 dotnet_naming_symbols.static_fields.required_modifiers = static
@@ -192,7 +191,7 @@ dotnet_naming_style.camel_case_style.capitalization = camel_case
 # Local functions are PascalCase
 dotnet_naming_rule.local_functions_should_be_pascal_case.severity = warning
 dotnet_naming_rule.local_functions_should_be_pascal_case.symbols = local_functions
-dotnet_naming_rule.local_functions_should_be_pascal_case.style = local_function_style
+dotnet_naming_rule.local_functions_should_be_pascal_case.style = non_private_static_field_style
 
 dotnet_naming_symbols.local_functions.applicable_kinds = local_function
 
@@ -201,29 +200,29 @@ dotnet_naming_style.local_function_style.capitalization = pascal_case
 # By default, name items with PascalCase
 dotnet_naming_rule.members_should_be_pascal_case.severity = warning
 dotnet_naming_rule.members_should_be_pascal_case.symbols = all_members
-dotnet_naming_rule.members_should_be_pascal_case.style = pascal_case_style
+dotnet_naming_rule.members_should_be_pascal_case.style = non_private_static_field_style
 
 dotnet_naming_symbols.all_members.applicable_kinds = *
 
 dotnet_naming_style.pascal_case_style.capitalization = pascal_case
 
 # error RS2008: Enable analyzer release tracking for the analyzer project containing rule '{0}'
-dotnet_diagnostic.rs2008.severity = suggestion
+dotnet_diagnostic.RS2008.severity = suggestion
 
 # IDE0073: File header
-dotnet_diagnostic.ide0073.severity = warning
+dotnet_diagnostic.IDE0073.severity = warning
 
 # IDE0035: Remove unreachable code
-dotnet_diagnostic.ide0035.severity = warning
+dotnet_diagnostic.IDE0035.severity = warning
 
 # IDE0036: Order modifiers
-dotnet_diagnostic.ide0036.severity = warning
+dotnet_diagnostic.IDE0036.severity = warning
 
 # IDE0043: Format string contains invalid placeholder
-dotnet_diagnostic.ide0043.severity = warning
+dotnet_diagnostic.IDE0043.severity = warning
 
 # IDE0044: Make field readonly
-dotnet_diagnostic.ide0044.severity = suggestion
+dotnet_diagnostic.IDE0044.severity = warning
 
 # RS0016: Only enable if API files are present
 dotnet_public_api_analyzer.require_api_files = true
@@ -251,11 +250,6 @@ csharp_indent_labels = flush_left
 csharp_style_allow_embedded_statements_on_same_line_experimental = false
 csharp_style_allow_blank_lines_between_consecutive_braces_experimental = false
 csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = false
-
-# Prefer "var" everywhere
-csharp_style_var_for_built_in_types = true:warning
-csharp_style_var_when_type_is_apparent = true:warning
-csharp_style_var_elsewhere = true:warning
 
 # Prefer method-like constructs to have a block body
 csharp_style_expression_bodied_methods = when_on_single_line:suggestion
@@ -333,7 +327,7 @@ dotnet_diagnostic.sa1519.severity = none
 csharp_style_implicit_object_creation_when_type_is_apparent = true
 
 # IDE0090: Use 'new(...)'
-dotnet_diagnostic.ide0090.severity = none
+dotnet_diagnostic.IDE0090.severity = none
 
 # XUNIT1004: Test methods should not be skipped
 dotnet_diagnostic.xUnit1004.severity = silent
@@ -347,57 +341,57 @@ dotnet_diagnostic.xUnit2019.severity = suggestion
 # IDE0011: Add braces
 csharp_prefer_braces = when_multiline:warning
 # NOTE: We need the below severity entry for Add Braces due to https://github.com/dotnet/roslyn/issues/44201
-dotnet_diagnostic.ide0011.severity = warning
+dotnet_diagnostic.IDE0011.severity = warning
 
 # IDE0040: Add accessibility modifiers
-dotnet_diagnostic.ide0040.severity = warning
+dotnet_diagnostic.IDE0040.severity = warning
 
 # CONSIDER: Are IDE0051 and IDE0052 too noisy to be warnings for IDE editing scenarios? Should they be made build-only warnings?
 # IDE0051: Remove unused private member
-dotnet_diagnostic.ide0051.severity = warning
+dotnet_diagnostic.IDE0051.severity = warning
 
 # IDE0052: Remove unread private member
-dotnet_diagnostic.ide0052.severity = warning
+dotnet_diagnostic.IDE0052.severity = warning
 
 # IDE0059: Unnecessary assignment to a value
-dotnet_diagnostic.ide0059.severity = warning
+dotnet_diagnostic.IDE0059.severity = warning
 
 # IDE0060: Remove unused parameter
-dotnet_diagnostic.ide0060.severity = error
+dotnet_diagnostic.IDE0060.severity = warning
+
+# IDE1006: Naming Styles
+dotnet_diagnostic.IDE1006.severity = warning
 
 # CA1051: Do not declare visible instance fields
-dotnet_code_quality.ca1051.exclude_structs = true
+dotnet_code_quality.CA1051.exclude_structs = true
 
 # CA1012: Abstract types should not have public constructors
-dotnet_diagnostic.ca1012.severity = warning
-
-# CA1822: Make member static
-dotnet_diagnostic.ca1822.severity = warning
+dotnet_diagnostic.CA1012.severity = warning
 
 # Prefer "var" everywhere
-dotnet_diagnostic.ide0007.severity = error
-csharp_style_var_for_built_in_types = true:error
-csharp_style_var_when_type_is_apparent = true:error
-csharp_style_var_elsewhere = true:error
+dotnet_diagnostic.IDE0007.severity = warning
+csharp_style_var_for_built_in_types = true:warning
+csharp_style_var_when_type_is_apparent = true:warning
+csharp_style_var_elsewhere = true:warning
 
 # dotnet_style_allow_multiple_blank_lines_experimental
-dotnet_diagnostic.ide2000.severity = warning
+dotnet_diagnostic.IDE2000.severity = error
 
 # csharp_style_allow_embedded_statements_on_same_line_experimental
-dotnet_diagnostic.ide2001.severity = warning
+dotnet_diagnostic.IDE2001.severity = warning
 
 # csharp_style_allow_blank_lines_between_consecutive_braces_experimental
-dotnet_diagnostic.ide2002.severity = warning
+dotnet_diagnostic.IDE2002.severity = error
 
 # dotnet_style_allow_statement_immediately_after_block_experimental
-dotnet_diagnostic.ide2003.severity = warning
+dotnet_diagnostic.IDE2003.severity = error
 
 # csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental
-dotnet_diagnostic.ide2004.severity = warning
+dotnet_diagnostic.IDE2004.severity = error
 
 [*.cs]
 # CS1591:Missing XML comment for publicly visible type or member
-dotnet_diagnostic.cs1591.severity = none
+dotnet_diagnostic.CS1591.severity = none
 # SA1503: Braces should not be omitted
 dotnet_diagnostic.SA1503.severity = none
 # VSTHRD200: Use "Async" suffix for async methods
@@ -462,29 +456,118 @@ dotnet_diagnostic.SA0001.severity = silent
 # SA1117: Parameters should be on same line or separate lines
 dotnet_diagnostic.SA1117.severity = none
 # The name of a parameter in C# does not begin with a lower-case letter.
+# Triggered by discards - "_"
 dotnet_diagnostic.SA1313.severity = none
 # SA1000: Keywords should be spaced correctly
 dotnet_diagnostic.SA1000.severity = none
 
+# IDE0003: Remove qualification
+dotnet_diagnostic.IDE0003.severity = warning
+
 # Default severity for analyzer diagnostics with category 'StyleCop.CSharp.OrderingRules'
 dotnet_analyzer_diagnostic.category-StyleCop.CSharp.OrderingRules.severity = silent
-
 # Default severity for analyzer diagnostics with category 'Globalization'
 dotnet_analyzer_diagnostic.category-Globalization.severity = silent
+
+# SA1306: Field names should begin with lower-case letter. Covered by IDE1006
+dotnet_diagnostic.SA1306.severity = none
+# SA1300: Element should begin with upper-case letter. Covered by IDE1006
+dotnet_diagnostic.SA1300.severity = none
+# SA1122: Use string.Empty for empty strings. 
+# NOTE: string.Empty is not constant and may not be used everywhere where "" used.
+dotnet_diagnostic.SA1122.severity = suggestion
+
+# SA1616: Element return value documentation should have text
+dotnet_diagnostic.SA1616.severity = warning
+# SA1111: Closing parenthesis should be on line of last parameter
+dotnet_diagnostic.SA1111.severity = warning
+# SA1629: Documentation text should end with a period
+dotnet_diagnostic.SA1629.severity = warning
+# SA1131: Use readable conditions
+dotnet_diagnostic.SA1131.severity = warning
+# SA1119: Statement should not use unnecessary parenthesis. Duplicates IDE0047
+dotnet_diagnostic.SA1119.severity = none
+# IDE0047: Remove unnecessary parentheses
+dotnet_diagnostic.IDE0047.severity = warning
+# SA1642: Constructor summary documentation should begin with standard text
+dotnet_diagnostic.SA1642.severity = warning
+
+# SA1100: Do not prefix calls with base unless local implementation exists
+dotnet_diagnostic.SA1100.severity = warning
+# IDE0002: Simplify Member Access
+dotnet_diagnostic.IDE0002.severity = warning
+# VSTHRD111: Use ConfigureAwait(bool)
+dotnet_diagnostic.VSTHRD111.severity = suggestion
+# IDE0059: Unnecessary assignment of a value
+csharp_style_unused_value_assignment_preference = discard_variable
+# SA1314: Type parameter names should begin with T
+dotnet_diagnostic.SA1314.severity = silent
+
+# SA1614: Element parameter documentation should have text
+dotnet_diagnostic.SA1614.severity = warning
+# SA1005: Single line comments should begin with single space
+dotnet_diagnostic.SA1005.severity = warning
+# SA1649: File name should match first type name
+dotnet_diagnostic.SA1649.severity = warning
+# SA1402: File may only contain a single type
+dotnet_diagnostic.SA1402.severity = warning
+# CA1707: Identifiers should not contain underscores
+dotnet_diagnostic.CA1707.severity = warning
+# SA1402: File may only contain a single type
+dotnet_diagnostic.SA1402.severity = warning
+# SA1515: Single-line comment should be preceded by blank line
+dotnet_diagnostic.SA1515.severity = warning
+# IDE0130: Namespace does not match folder structure
+dotnet_diagnostic.IDE0130.severity = warning
+# CA1822: Make member static
+dotnet_diagnostic.CA1822.severity = warning
+
+# SA1137: Elements should have the same indentation
+dotnet_diagnostic.SA1137.severity = error
+# SA1025: Code should not contain multiple whitespace in a row
+dotnet_diagnostic.SA1025.severity = error
+# SA1001: Commas should be spaced correctly
+dotnet_diagnostic.SA1001.severity = error
+# SA1003: Symbols should be spaced correctly
+dotnet_diagnostic.SA1003.severity = error
+# SA1008: Opening parenthesis should be spaced correctly
+dotnet_diagnostic.SA1008.severity = error
+# SA1507: Code should not contain multiple blank lines in a row
+dotnet_diagnostic.SA1507.severity = error
+# SA1508: Closing braces should not be preceded by blank line
+dotnet_diagnostic.SA1508.severity = error
+# SA1513: Closing brace should be followed by blank line
+dotnet_diagnostic.SA1513.severity = error
+# SA1106: Code should not contain empty statements
+dotnet_diagnostic.SA1106.severity = error
+
+# Default severity for analyzer diagnostics with category 'StyleCop.CSharp.DocumentationRules'
+dotnet_analyzer_diagnostic.category-StyleCop.CSharp.DocumentationRules.severity = warning
+csharp_using_directive_placement = outside_namespace:suggestion
+csharp_prefer_simple_using_statement = true:suggestion
+csharp_style_namespace_declarations = block_scoped:silent
+csharp_style_prefer_method_group_conversion = true:silent
+csharp_style_prefer_top_level_statements = true:silent
+csharp_style_expression_bodied_lambdas = true:silent
+csharp_style_expression_bodied_local_functions = when_on_single_line:silent
 
 [*Test*.cs]
 # CA1707: Identifiers should not contain underscores
 dotnet_diagnostic.CA1707.severity = silent
 
+[**/*Test*/**/*.cs]
+# CA1707: Identifiers should not contain underscores
+dotnet_diagnostic.CA1707.severity = silent
+
 [src/CodeStyle/**.{cs,vb}]
 # warning RS0005: Do not use generic CodeAction.Create to create CodeAction
-dotnet_diagnostic.rs0005.severity = none
+dotnet_diagnostic.RS0005.severity = none
 
 [src/{VisualStudio}/**/*.{cs,vb}]
 # CA1822: Make member static
 # Not enforced as a build 'warning' for 'VisualStudio' layer due to large number of false positives from https://github.com/dotnet/roslyn-analyzers/issues/3857 and https://github.com/dotnet/roslyn-analyzers/issues/3858
 # Additionally, there is a risk of accidentally breaking an internal API that partners rely on though IVT.
-dotnet_diagnostic.ca1822.severity = suggestion
+dotnet_diagnostic.CA1822.severity = suggestion
 
 [*.{appxmanifest,axml,build,config,csproj,dbml,discomap,dtd,jsproj,lsproj,njsproj,nuspec,proj,props,proto,resw,resx,StyleCop,targets,tasks,vbproj,xml,xsd}]
 indent_style = tab
@@ -496,6 +579,9 @@ indent_style = space
 indent_size = 4
 tab_width = 4
 dotnet_diagnostic.CA1051.severity=suggestion
+dotnet_style_operator_placement_when_wrapping = beginning_of_line
+end_of_line = crlf
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
 
 [*.{json,resjson}]
 indent_style = space
